# raytracing

./: CMakeLists.txt  main.cpp  vec3.h
.cache/clangd/index/: camera.cpp.B58D360856CB5318.idx  camera.h.45EB998341F11E94.idx  circle.h.04DB32E48CC923F5.idx  context.c.6459B97F5F1193A5.idx  egl_context.c.1A2D1D8E288A7CFE.idx  glad.c.58ACD4123BECA46D.idx  glad.c.704FB3A33564A21E.idx  glad.h.45A3B8E8322BE0A7.idx  glad.h.6A2D08704AAA1238.idx  glfw3.h.2E1418CC825E60C3.idx  glfw3native.h.84FCE64EF2139B99.idx  glx_context.c.705A092B149F3C7B.idx  init.c.BB833BC5459A7A7C.idx  input.c.09FC5B906145783A.idx  internal.h.7529D430C40B4E71.idx  khrplatform.h.3DE09858114116E8.idx  khrplatform.h.7946DCE17496578F.idx  light.h.7AD1C15E26BBB759.idx  linux_joystick.c.B20FA8B8B8BDD0F3.idx  linux_joystick.h.785C6ADC6EEBB2C8.idx  main.cpp.A7B448D02365B0A0.idx  mappings.h.29D37EBBE91A7797.idx  monitor.c.1BEDC6CF69F6EE2D.idx  null_init.c.46575F9E7E5E6B13.idx  null_joystick.c.22CA93B67A0A6C39.idx  null_joystick.h.B4B8743CE2B4D611.idx  null_monitor.c.4D3CACAB3F1D1727.idx  null_platform.h.3F0DDCE606BE33F5.idx  null_window.c.FD1295BA0338FCA6.idx  option.h.0ECD587AEDED866D.idx  osmesa_context.c.9CBF7AEBB80C9EB9.idx  platform.c.FBA39E2232B51CF0.idx  platform.h.1314BA83F7EA068F.idx  posix_module.c.F932284BA33B532C.idx  (+24 more)
cmake/: Findglfw3.cmake
dependencies/glad/: CMakeLists.txt
include/: camera.h  circle.h  light.h  option.h  ray.h  raytree.h  renderer.h  vec3.h
shader/: basic.frag  basic.vert  compute_shader.glsl  fragment_shader.glsl
src/: camera.cpp  glad.c  ray.cpp  renderer.cpp  vec3.cpp
(+2 files in other folders)
